--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <h3>Proyecto de sitio Web 2021 - Periodo 1</h3>
 
-    <p>Nombre: Hector David Gomez Pertuz. <br> Programa: Ingenieria De Sistemas. <br> Fecha De Creacion: 03-02-2021 <br> Correo Personal y Skype: HDGOMEZ8@hotmail.com <br>
+    <p>Nombre: Hector David Gomez Pertuz. <br> Programa: Ingenieria De Sistemas. <br> Fecha De Creacion: 03-02-2021 <br> Correo Institucional: hdgomezpe@unadvirtual.edu.co <br> Correo Personal y Skype: HDGOMEZ8@hotmail.com <br>
+
     </p>
 
 </body>
