--- a/Fase2/design.html
+++ b/Fase2/design.html
@@ -10,16 +10,56 @@
 
 <body>
     <!-- Encabezado -->
-    <header>Etiquetas Básicas de HTML, atributos y valores</header>
+    <header><h1>Etiquetas Básicas de HTML, atributos y valores</h1></header>
 
-    <!-- menú -->
+    <!-- MENU -->
     <nav>
         <ul>
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Sobre nosotros</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Temas</a>
+                <ul>
+                    <li><a href="#">Tema 1</a></li>
+                    <li><a href="#">Tema 2</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Recursos Digitales</a>
+                <ul>
+                    <li><a href="#">Recurso 1</a></li>
+                    <li><a href="#">Recurso 2</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Aprendizaje</a>
+                <ul>
+                    <li><a href="#">Actividad 1</a></li>
+                    <li><a href="#">actividad 2</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Inicio</a></li>
         </ul>
     </nav>
+
+    <!--SECTION-->
+    <section>
+        <h2>Propósito del sitio</h2>
+        <p>empecemos por lo básico, paso a paso. En este primer capítulo aprenderá cómo construir una plantilla para futuros proyectos usando los nuevos elementos HTML introducidos en HTML5.</p>
+    </section>
+
+    <!--ARTICLE-->
+    <article>
+        <p>Las etiquetas son la estructura básica del HTML. Estas etiquetas o tags se componen y contienen otras propiedades, como son los atributos y el contenido.
+
+            HTML define un total de 91 etiquetas, de las cuales 10 se consideran obsoletas. Sin embargo, una etiqueta por sí sola a veces no contiene la suficiente información para estar completamente definida. Para ello contamos con los atributos: pares nombre-valor separados por "=" y escritos en la etiqueta inicial de un elemento después del nombre del elemento. El valor puede estar encerrado entre "comillas dobles" o 'simples'. Existen, también, algunos atributos que afectan al elemento por su presencia en la etiqueta de inicio, como puede ser el atributo ismap para el elemento img.</p>
+            <img src="Contenido.jpg" alt="Contenido Del Curso">
+
+    </article>
+
+    <!--footer-->
+    <footer>
+        Correo: HDGOMEZ8@hotmail.com <br>
+        Skype: HDGOMEZ8 <br>   
+        Fecha de Actualizacion: 23-02-2021 <br>
+    </footer>
+
 </body>
 
 </html>
