--- a/fase2/design.html
+++ b/fase2/design.html
@@ -10,7 +10,9 @@
 
 <body>
     <!-- Encabezado -->
-    <header><h1>Etiquetas Básicas de HTML, atributos y valores</h1></header>
+    <header>
+        <h1>Etiquetas Básicas de HTML, atributos y valores</h1>
+    </header>
 
     <!-- MENU -->
     <nav>
@@ -34,7 +36,11 @@
                     <li><a href="#">actividad 2</a></li>
                 </ul>
             </li>
-            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Acerca de...</a>
+                <ul>
+                    <li><a href="#">Autor</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
 
@@ -46,20 +52,20 @@
 
     <!--ARTICLE-->
     <article>
-        <p>Las etiquetas son la estructura básica del HTML. Estas etiquetas o tags se componen y contienen otras propiedades, como son los atributos y el contenido.
-
-            HTML define un total de 91 etiquetas, de las cuales 10 se consideran obsoletas. Sin embargo, una etiqueta por sí sola a veces no contiene la suficiente información para estar completamente definida. Para ello contamos con los atributos: pares nombre-valor separados por "=" y escritos en la etiqueta inicial de un elemento después del nombre del elemento. El valor puede estar encerrado entre "comillas dobles" o 'simples'. Existen, también, algunos atributos que afectan al elemento por su presencia en la etiqueta de inicio, como puede ser el atributo ismap para el elemento img.</p>
-            <img src="Contenido.jpg" alt="Contenido Del Curso">
-            <h2>Mockup De La Página</h2>
-            <img src="Mockup.JPG" alt="Mockup De La Página">
+        <p>Las etiquetas son la estructura básica del HTML. Estas etiquetas o tags se componen y contienen otras propiedades, como son los atributos y el contenido. HTML define un total de 91 etiquetas, de las cuales 10 se consideran obsoletas. Sin embargo,
+            una etiqueta por sí sola a veces no contiene la suficiente información para estar completamente definida. Para ello contamos con los atributos: pares nombre-valor separados por "=" y escritos en la etiqueta inicial de un elemento después del
+            nombre del elemento. El valor puede estar encerrado entre "comillas dobles" o 'simples'. Existen, también, algunos atributos que afectan al elemento por su presencia en la etiqueta de inicio, como puede ser el atributo ismap para el elemento
+            img.
+        </p>
+        <img src="Contenido.jpg" alt="Contenido Del Curso">
+        <h2>Mockup De La Página</h2>
+        <img src="Mockup.JPG" alt="Mockup De La Página">
 
     </article>
 
     <!--footer-->
     <footer>
-        Correo: HDGOMEZ8@hotmail.com <br>
-        Skype: HDGOMEZ8 <br>   
-        Fecha de Actualizacion: 23-02-2021 <br>
+        Correo: HDGOMEZ8@hotmail.com <br> Skype: HDGOMEZ8 <br> Fecha de Actualizacion: 23-02-2021 <br>
     </footer>
 
 </body>
