--- a/fase3/paginas/temas/1-Estructura Global.html
+++ b/fase3/paginas/temas/1-Estructura Global.html
@@ -6,28 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fase 3</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../../css/estilos.css">
 </head>
 
 <body>
 
     <!-- Encabezado -->
     <header>
-        <img height="200px" width="200px" src="img/Logo.PNG" alt="Logo">
+        <img height="200px" width="200px" src="../../img/Logo.PNG" alt="Logo">
         <h1>Sitio web como herramienta de aprendizaje del tema: <br> Etiquetas Básicas de HTML, atributos y valores</h1>
     </header>
 
     <!-- MENU -->
     <nav class="menu-area">
         <ul>
-            <li> <a href="index.html">Inicio</a> </li>
+            <li> <a href="../../index.html">Inicio</a> </li>
             <li><a href="#">Temas</a>
                 <ul class="dropdown-1">
-                    <li><a href="paginas/temas/1-Estructura Global.html">1. Estructura Global.</a></li>
-                    <li><a href="#">2. Estructura Del Cuerpo.</a></li>
-                    <li><a href="#">3. Dentro Del Cuerpo.</a></li>
-                    <li><a href="#">4. Nuevos Y Viejos Elementos.</a></li>
-                    <li><a href="#">5. Referencia Rápida.</a></li>
+                    <li><a href="1-Estructura Global.html">1. Estructura Global.</a></li>
+                    <li><a href="2-Estructura Del Cuerpo.html">2. Estructura Del Cuerpo.</a></li>
+                    <li><a href="3-Dentro Del Cuerpo.html">3. Dentro Del Cuerpo.</a></li>
+                    <li><a href="4-Nuevos Y Viejos Elementos.html">4. Nuevos Y Viejos Elementos.</a></li>
+                    <li><a href="5-Referencia Rápida.html">5. Referencia Rápida.</a></li>
                 </ul>
             </li>
             <li><a href="#">Recursos Digitales</a>
@@ -60,18 +60,16 @@
 
         <!--SECTION-->
         <section>
-            <h1>Componentes Básicos De HTML </h1><br>
-            <h4>Propósito:</h4><br>
-            <p>Empecemos por lo básico, paso a paso. En este primer capítulo aprenderá cómo construir una plantilla para futuros proyectos usando los nuevos elementos HTML introducidos en HTML5.
-            </p> <br>
+            <h1>1. Estructura Global.</h1><br>
+            <p>Los documentos HTML se encuentran estrictamente organizados. Cada parte del documento está diferenciada, declarada y determinada por etiquetas específicas. En esta parte del capítulo vamos a ver cómo construir la estructura global de un documento
+                HTML y los nuevos elementos semánticos incorporados en HTML5. </p> <br>
 
             <!--ARTICLE-->
             <article>
                 <h3>Contenido: </h3><br>
-                <h4>1. Estructura Global.</h4><br>
+                <h4></h4><br>
                 <p>
-                    Los documentos HTML se encuentran estrictamente organizados. Cada parte del documento está diferenciada, declarada y determinada por etiquetas específicas. En esta parte del capítulo vamos a ver cómo construir la estructura global de un documento HTML
-                    y los nuevos elementos semánticos incorporados en HTML5.
+
                 </p><br>
 
                 <h4>2. Estructura Del Cuerpo.</h4><br>
