--- a/fase3/paginas/temas/4-Nuevos Y Viejos Elementos.html
+++ b/fase3/paginas/temas/4-Nuevos Y Viejos Elementos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fase 3</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../../css/estilos.css">
 </head>
 
 <body>
@@ -20,14 +20,14 @@
     <!-- MENU -->
     <nav class="menu-area">
         <ul>
-            <li> <a href="index.html">Inicio</a> </li>
+            <li> <a href="#">Inicio</a> </li>
             <li><a href="#">Temas</a>
                 <ul class="dropdown-1">
-                    <li><a href="paginas/temas/1-Estructura Global.html">1. Estructura Global.</a></li>
-                    <li><a href="#">2. Estructura Del Cuerpo.</a></li>
-                    <li><a href="#">3. Dentro Del Cuerpo.</a></li>
-                    <li><a href="#">4. Nuevos Y Viejos Elementos.</a></li>
-                    <li><a href="#">5. Referencia Rápida.</a></li>
+                    <li><a href="1-Estructura Global.html">1. Estructura Global.</a></li>
+                    <li><a href="2-Estructura Del Cuerpo.html">2. Estructura Del Cuerpo.</a></li>
+                    <li><a href="3-Dentro Del Cuerpo.html">3. Dentro Del Cuerpo.</a></li>
+                    <li><a href="4-Nuevos Y Viejos Elementos.html">4. Nuevos Y Viejos Elementos.</a></li>
+                    <li><a href="5-Referencia Rápida.html">5. Referencia Rápida.</a></li>
                 </ul>
             </li>
             <li><a href="#">Recursos Digitales</a>
