--- a/fase3/index.html
+++ b/fase3/index.html
@@ -24,16 +24,19 @@
             <li><a href="#">Temas</a>
                 <ul class="dropdown-1">
                     <li><a href="paginas/temas/1-Estructura Global.html">1. Estructura Global.</a></li>
-                    <li><a href="#">2. Estructura Del Cuerpo.</a></li>
-                    <li><a href="#">3. Dentro Del Cuerpo.</a></li>
-                    <li><a href="#">4. Nuevos Y Viejos Elementos.</a></li>
-                    <li><a href="#">5. Referencia Rápida.</a></li>
+                    <li><a href="paginas/temas/2-Estructura Del Cuerpo.html">2. Estructura Del Cuerpo.</a></li>
+                    <li><a href="paginas/temas/3-Dentro Del Cuerpo.html">3. Dentro Del Cuerpo.</a></li>
+                    <li><a href="paginas/temas/4-Nuevos Y Viejos Elementos.html">4. Nuevos Y Viejos Elementos.</a></li>
+                    <li><a href="paginas/temas/5-Referencia Rápida.html">5. Referencia Rápida.</a></li>
                 </ul>
             </li>
             <li><a href="#">Recursos Digitales</a>
                 <ul class="dropdown-1">
-                    <li> <a href="#">Recurso 1</a> </li>
-                    <li><a href="#">Recurso 2</a></li>
+                    <li><a href="paginas/recursos/1-Estructura Global.html">1. Estructura Global.</a></li>
+                    <li><a href="paginas/recursos/2-Estructura Del Cuerpo.html">2. Estructura Del Cuerpo.</a></li>
+                    <li><a href="paginas/recursos/3-Dentro Del Cuerpo.html">3. Dentro Del Cuerpo.</a></li>
+                    <li><a href="paginas/recursos/4-Nuevos Y Viejos Elementos.html">4. Nuevos Y Viejos Elementos.</a></li>
+                    <li><a href="paginas/recursos/5-Referencia Rápida.html">5. Referencia Rápida.</a></li>
                 </ul>
             </li>
             <li><a href="#">Aprendizaje</a>
@@ -42,20 +45,17 @@
                     <li><a href="#">Aprendizaje 2</a></li>
                 </ul>
             </li>
-            <li><a href="#">Autor</a></li>
+            <li><a href="paginas/autor.html">Autor</a></li>
         </ul>
     </nav>
 
     <!--div-->
     <div class="central">
         <aside>
-            <h5> Caja lateral</h5>
-            <p>aqui puedo colocar lo de facebook</p>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam molestias ducimus fuga rem, similique tempore
-
-            </p>
-            <p>Prueba</p>
+            <h2>Timeline de facebook</h2>
+            <h4>UNAD</h4>
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=500&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="700"
+                style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </aside>
 
         <!--SECTION-->
@@ -64,6 +64,10 @@
             <h4>Propósito:</h4><br>
             <p>Empecemos por lo básico, paso a paso. En este primer capítulo aprenderá cómo construir una plantilla para futuros proyectos usando los nuevos elementos HTML introducidos en HTML5.
             </p> <br>
+
+            <article>
+                <iframe class="youtube" src="https://www.youtube.com/embed/10GHKjgQIR0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </article>
 
             <!--ARTICLE-->
             <article>
@@ -93,12 +97,7 @@
             </article>
         </section>
 
-        <div class="lateral2">
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe.
-            </p>
-            <img width="150px" height="200px" src="img/imagen.jpg" alt="">
-        </div>
+
     </div>
 
     <!--footer-->
