--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
     <h2>Link A La Fase 2</h2>
 
-    <a href="fase2/design.html">Fase 2</a>
+    <a href="fase2/design.html">Fase 2</a> <br><br>
+    <a href="fase3/index.html">Fase 3</a>
 
 </body>
 
