--- a/fase3/paginas/temas/3-Dentro Del Cuerpo.html
+++ b/fase3/paginas/temas/3-Dentro Del Cuerpo.html
@@ -45,7 +45,7 @@
                     <li><a href="#">Aprendizaje 2</a></li>
                 </ul>
             </li>
-            <li><a href="#">Autor</a></li>
+            <li><a href="../autor.html">Autor</a></li>
         </ul>
     </nav>
 
