--- a/fase3/paginas/recursos/4-Nuevos Y Viejos Elementos.html
+++ b/fase3/paginas/recursos/4-Nuevos Y Viejos Elementos.html
@@ -60,29 +60,19 @@
 
         <!--SECTION-->
         <section>
-            <h1>4. Nuevos Y Viejos Elementos.</h1><br>
-            <p>HTML5 fue desarrollado con la intención de simplificar, especificar y organizar el código. Para lograr este propósito, nuevas etiquetas y atributos fueron agregados y HTML fue completamente integrado a CSS y Javascript. Estas incorporaciones
-                y mejoras de versiones previas están relacionadas no solo con nuevos elementos sino también con cómo usamos los ya existentes. </p><br>
-            <br>
+            <h1>4.Nuevos Y Viejos Elementos</h1><br>
+
             <!--ARTICLE-->
             <article>
                 <h3>Contenido: </h3><br>
 
-                <img class="imagenes" src="../../img/Estructura Global.JPG" alt="Estructura Global">
-
                 <article>
-                    <iframe class="pdf" height="400" src="../../pdf/Estructura Global.pdf" frameborder="0"></iframe>
+                    <iframe class="pdf" height="400" src="../../pdf/Nuevos Y Viejos Elementos.pdf" frameborder="0"></iframe>
                 </article>
 
             </article>
 
             <p>Fuente: El gran libro de HTML5, CSS3 y JavaScript</p>
-            <!--ARTICLE-->
-            <article>
-
-
-
-            </article>
         </section>
 
 
