--- a/fase3/paginas/recursos/5-Referencia Rápida.html
+++ b/fase3/paginas/recursos/5-Referencia Rápida.html
@@ -60,28 +60,19 @@
 
         <!--SECTION-->
         <section>
-            <h1>5. Referencia Rápida.</h1><br>
-            <p>En la especificación HTML5, HTML está a cargo de la estructura del documento y provee un grupo completo de nuevos elementos para este propósito. La especificación también incluye algunos elementos con la única tarea de proveer estilos. aqui
-                veremos una lista de los que consideramos más relevantes.</p> <br>
+            <h1>5.Referencia Rápida.</h1><br>
 
             <!--ARTICLE-->
             <article>
                 <h3>Contenido: </h3><br>
 
-                <img class="imagenes" src="../../img/Estructura Global.JPG" alt="Estructura Global">
-
                 <article>
-                    <iframe class="pdf" height="400" src="../../pdf/Estructura Global.pdf" frameborder="0"></iframe>
+                    <iframe class="pdf" height="400" src="../../pdf/Referencia Rápida.pdf" frameborder="0"></iframe>
                 </article>
 
             </article>
 
             <p>Fuente: El gran libro de HTML5, CSS3 y JavaScript</p>
-            <!--ARTICLE-->
-            <article>
-
-
-            </article>
         </section>
 
 
