--- a/fase3/paginas/recursos/2-Estructura Del Cuerpo.html
+++ b/fase3/paginas/recursos/2-Estructura Del Cuerpo.html
@@ -64,19 +64,10 @@
 
             <!--ARTICLE-->
             <article>
-                <iframe class="youtube" height="315" src="https://www.youtube.com/embed/DxumDNXRtpI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </article>
-
-            <p>La estructura del cuerpo generará la parte visible del documento. Este es el código que producirá nuestra página web. </p> <br>
-
-            <!--ARTICLE-->
-            <article>
                 <h3>Contenido: </h3><br>
 
-                <img class="imagenes" src="../../img/Estructura Global.JPG" alt="Estructura Global">
-
                 <article>
-                    <iframe class="pdf" height="400" src="../../pdf/Estructura Global.pdf" frameborder="0"></iframe>
+                    <iframe class="pdf" height="400" src="../../pdf/Estructura Del Cuerpo.pdf" frameborder="0"></iframe>
                 </article>
 
             </article>
