--- a/fase3/paginas/recursos/3-Dentro Del Cuerpo.html
+++ b/fase3/paginas/recursos/3-Dentro Del Cuerpo.html
@@ -60,29 +60,19 @@
 
         <!--SECTION-->
         <section>
-            <h1>3. Dentro Del Cuerpo. </h1><br>
-            <p>El cuerpo de nuestro documento está listo. La estructura básica de nuestro sitio web fue finalizada, pero aún tenemos que trabajar en el contenido. Los elementos HTML5 estudiados en el capitulo anterior nos ayudan a identificar cada sección
-                del diseño y asignar un propósito intrínseco a cada una de ellas, pero lo que es realmente importante para nuestro sitio web se encuentra en el interior de estas secciones.</p><br>
-            <br>
+            <h1>3.Dentro Del Cuerpo.</h1><br>
+
             <!--ARTICLE-->
             <article>
                 <h3>Contenido: </h3><br>
 
-                <img class="imagenes" src="../../img/Estructura Global.JPG" alt="Estructura Global">
-
                 <article>
-                    <iframe class="pdf" height="400" src="../../pdf/Estructura Global.pdf" frameborder="0"></iframe>
+                    <iframe class="pdf" height="400" src="../../pdf/Dentro Del Cuerpo.pdf" frameborder="0"></iframe>
                 </article>
 
             </article>
 
             <p>Fuente: El gran libro de HTML5, CSS3 y JavaScript</p>
-            <!--ARTICLE-->
-            <article>
-                <h3>Contenido: </h3><br>
-
-            </article>
-
         </section>
 
 
