--- a/fase3/paginas/recursos/3-Dentro Del Cuerpo.html
+++ b/fase3/paginas/recursos/3-Dentro Del Cuerpo.html
@@ -23,11 +23,11 @@
             <li> <a href="../../index.html">Inicio</a> </li>
             <li><a href="#">Temas</a>
                 <ul class="dropdown-1">
-                    <li><a href="1-Estructura Global.html">1. Estructura Global.</a></li>
-                    <li><a href="2-Estructura Del Cuerpo.html">2. Estructura Del Cuerpo.</a></li>
-                    <li><a href="3-Dentro Del Cuerpo.html">3. Dentro Del Cuerpo.</a></li>
-                    <li><a href="4-Nuevos Y Viejos Elementos.html">4. Nuevos Y Viejos Elementos.</a></li>
-                    <li><a href="5-Referencia Rápida.html">5. Referencia Rápida.</a></li>
+                    <li><a href="../temas/1-Estructura Global.html">1. Estructura Global.</a></li>
+                    <li><a href="../temas/2-Estructura Del Cuerpo.html">2. Estructura Del Cuerpo.</a></li>
+                    <li><a href="../temas/3-Dentro Del Cuerpo.html">3. Dentro Del Cuerpo.</a></li>
+                    <li><a href="../temas/4-Nuevos Y Viejos Elementos.html">4. Nuevos Y Viejos Elementos.</a></li>
+                    <li><a href="../temas/5-Referencia Rápida.html">5. Referencia Rápida.</a></li>
                 </ul>
             </li>
             <li><a href="#">Recursos Digitales</a>
