--- a/fase3/index.html
+++ b/fase3/index.html
@@ -65,9 +65,10 @@
             <p>Empecemos por lo básico, paso a paso. En este primer capítulo aprenderá cómo construir una plantilla para futuros proyectos usando los nuevos elementos HTML introducidos en HTML5.
             </p> <br>
 
+            <!--ARTICLE
             <article>
                 <iframe class="youtube" src="https://www.youtube.com/embed/10GHKjgQIR0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </article>
+            </article>-->
 
             <!--ARTICLE-->
             <article>
