--- a/fase3/paginas/temas/3-Dentro Del Cuerpo.html
+++ b/fase3/paginas/temas/3-Dentro Del Cuerpo.html
@@ -68,20 +68,11 @@
             <article>
                 <h3>Contenido: </h3><br>
 
-                <img class="imagenes" src="../../img/Estructura Global.JPG" alt="Estructura Global">
-
-                <article>
-                    <iframe class="pdf" height="400" src="../../pdf/Estructura Global.pdf" frameborder="0"></iframe>
-                </article>
+                <img class="imagenes" src="../../img/Dentro Del Cuerpo.jpg" alt="Estructura Global">
 
             </article>
 
             <p>Fuente: El gran libro de HTML5, CSS3 y JavaScript</p>
-            <!--ARTICLE-->
-            <article>
-                <h3>Contenido: </h3><br>
-
-            </article>
 
         </section>
 
