--- a/fase3/paginas/temas/2-Estructura Del Cuerpo.html
+++ b/fase3/paginas/temas/2-Estructura Del Cuerpo.html
@@ -73,11 +73,7 @@
             <article>
                 <h3>Contenido: </h3><br>
 
-                <img class="imagenes" src="../../img/Estructura Global.JPG" alt="Estructura Global">
-
-                <article>
-                    <iframe class="pdf" height="400" src="../../pdf/Estructura Global.pdf" frameborder="0"></iframe>
-                </article>
+                <img class="imagenes" src="../../img/Estructura Del Cuerpo.jpg" alt="Estructura Global">
 
             </article>
 
