--- a/fase3/paginas/temas/4-Nuevos Y Viejos Elementos.html
+++ b/fase3/paginas/temas/4-Nuevos Y Viejos Elementos.html
@@ -68,11 +68,7 @@
             <article>
                 <h3>Contenido: </h3><br>
 
-                <img class="imagenes" src="../../img/Estructura Global.JPG" alt="Estructura Global">
-
-                <article>
-                    <iframe class="pdf" height="400" src="../../pdf/Estructura Global.pdf" frameborder="0"></iframe>
-                </article>
+                <img class="imagenes" src="../../img/Nuevos Y Viejos Elementos.jpg" alt="Estructura Global">
 
             </article>
 
