--- a/fase3/paginas/temas/5-Referencia Rápida.html
+++ b/fase3/paginas/temas/5-Referencia Rápida.html
@@ -68,11 +68,8 @@
             <article>
                 <h3>Contenido: </h3><br>
 
-                <img class="imagenes" src="../../img/Estructura Global.JPG" alt="Estructura Global">
+                <img class="imagenes" src="../../img/Referencia Rápida.JPG" alt="Estructura Global">
 
-                <article>
-                    <iframe class="pdf" height="400" src="../../pdf/Estructura Global.pdf" frameborder="0"></iframe>
-                </article>
 
             </article>
 
