--- a/fase3/paginas/temas/1-Estructura Global.html
+++ b/fase3/paginas/temas/1-Estructura Global.html
@@ -62,9 +62,10 @@
         <section>
             <h1>1. Estructura Global.</h1><br>
 
+            <!--articulo
             <article>
                 <iframe class="youtube" src="https://www.youtube.com/embed/GrxW9LQ-udo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </article>
+            </article>-->
 
             <p>Los documentos HTML se encuentran estrictamente organizados. Cada parte del documento está diferenciada, declarada y determinada por etiquetas específicas. En esta parte del capítulo vamos a ver cómo construir la estructura global de un documento
                 HTML y los nuevos elementos semánticos incorporados en HTML5. </p> <br>
