--- a/fase3/paginas/temas/2-Estructura Del Cuerpo.html
+++ b/fase3/paginas/temas/2-Estructura Del Cuerpo.html
@@ -64,7 +64,7 @@
 
             <!--ARTICLE-->
             <article>
-                <iframe class="youtube" height="315" src="https://www.youtube.com/embed/DxumDNXRtpI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="youtube" height="315" src="https://www.youtube.com/embed/Z2eh8FJOCJc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </article>
 
             <p>La estructura del cuerpo generará la parte visible del documento. Este es el código que producirá nuestra página web. </p> <br>
