--- a/fase3/paginas/temas/3-Dentro Del Cuerpo.html
+++ b/fase3/paginas/temas/3-Dentro Del Cuerpo.html
@@ -61,6 +61,12 @@
         <!--SECTION-->
         <section>
             <h1>3. Dentro Del Cuerpo. </h1><br>
+
+            <!--ARTICLE-->
+            <article>
+                <iframe class="youtube" height="315" src="https://www.youtube.com/embed/XQ-DOLLCqCc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </article>
+
             <p>El cuerpo de nuestro documento está listo. La estructura básica de nuestro sitio web fue finalizada, pero aún tenemos que trabajar en el contenido. Los elementos HTML5 estudiados en el capitulo anterior nos ayudan a identificar cada sección
                 del diseño y asignar un propósito intrínseco a cada una de ellas, pero lo que es realmente importante para nuestro sitio web se encuentra en el interior de estas secciones.</p><br>
             <br>
