--- a/fase3/paginas/temas/4-Nuevos Y Viejos Elementos.html
+++ b/fase3/paginas/temas/4-Nuevos Y Viejos Elementos.html
@@ -61,6 +61,12 @@
         <!--SECTION-->
         <section>
             <h1>4. Nuevos Y Viejos Elementos.</h1><br>
+
+            <!--ARTICLE-->
+            <article>
+                <iframe class="youtube" height="315" src="https://www.youtube.com/embed/HoJ5qOoDNCo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </article>
+
             <p>HTML5 fue desarrollado con la intención de simplificar, especificar y organizar el código. Para lograr este propósito, nuevas etiquetas y atributos fueron agregados y HTML fue completamente integrado a CSS y Javascript. Estas incorporaciones
                 y mejoras de versiones previas están relacionadas no solo con nuevos elementos sino también con cómo usamos los ya existentes. </p><br>
             <br>
