--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Héctor Gómez" />
+    <meta name="copyright" content="Héctor Gómez" />
+    <meta name="description" content="Esta pagina contiene material para aprender diseño web" />
+    <meta name="keywords" content="html5,css,bootstrap" />
     <title>Proyecto de sitio Web 2021 - Periodo 1.</title>
 </head>
 
