--- a/fase3/index.html
+++ b/fase3/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Héctor Gómez" />
+    <meta name="copyright" content="Héctor Gómez" />
+    <meta name="description" content="Esta pagina contiene material para aprender diseño web" />
+    <meta name="keywords" content="html5,css,bootstrap" />
     <title>Fase 3</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
