--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="copyright" content="Héctor Gómez" />
     <meta name="description" content="Esta pagina contiene material para aprender diseño web" />
     <meta name="keywords" content="html5,css,bootstrap" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Proyecto de sitio Web 2021 - Periodo 1.</title>
 </head>
 
@@ -25,6 +27,9 @@
 
     <a href="fase2/design.html">Fase 2</a> <br><br>
     <a href="fase3/index.html">Fase 3</a>
+
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
 </body>
 
