--- a/fase3/paginas/autor.html
+++ b/fase3/paginas/autor.html
@@ -17,7 +17,7 @@
 
     <!-- Encabezado -->
     <header>
-        <img height="200px" width="200px" src="../img/Logo.png" alt="Logo">
+        <img height="200px" width="200px" src="../img/Logo.png" alt="Logo1">
         <h1>Sitio web como herramienta de aprendizaje del tema: <br> Etiquetas Básicas de HTML, atributos y valores</h1>
     </header>
 
