--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <h2>Link A La Fase 2</h2>
 
     <a href="fase2/design.html">Fase 2</a> <br><br>
-    <a href="fase3/index.html">Fase 3</a>
+    <a href="fase3/index.html">Fase 3</a> <br><br>
+    <a href="fase4/index.html">Fase 4</a>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
