--- a/fase4/index.html
+++ b/fase4/index.html
@@ -45,8 +45,8 @@
             </li>
             <li><a href="#">Aprendizaje</a>
                 <ul class="dropdown-1">
-                    <li> <a href="../aprendizaje/1-Estructura Global.html">Aprendizaje 1</a> </li>
-                    <li><a href="../aprendizaje/2-Estructura Del Cuerpo.html">Aprendizaje 2</a></li>
+                    <li> <a href="paginas/aprendizaje/1-Estructura Global.html">1-Estructura Global.</a> </li>
+                    <li><a href="paginas/aprendizaje/2-Estructura Del Cuerpo.html">2-Estructura Del Cuerpo.</a></li>
                 </ul>
             </li>
             <li><a href="paginas/autor.html">Autor</a></li>
