--- a/fase4/paginas/aprendizaje/1-Estructura Global.html
+++ b/fase4/paginas/aprendizaje/1-Estructura Global.html
@@ -71,7 +71,7 @@
                 <h3>Contenido: </h3><br>
 
                 <article>
-                    <iframe class="pdf" height="400" src="../../pdf/Estructura Global.pdf" frameborder="0"></iframe>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdMKcFELTPEJwJUM2XOK22tqUC934-dwh83X-F8e9ThPTAi5w/viewform?embedded=true" width="640" height="2154" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
                 </article>
 
             </article>
