--- a/fase4/paginas/aprendizaje/2-Estructura Del Cuerpo.html
+++ b/fase4/paginas/aprendizaje/2-Estructura Del Cuerpo.html
@@ -71,7 +71,7 @@
                 <h3>Contenido: </h3><br>
 
                 <article>
-                    <iframe class="pdf" height="400" src="../../pdf/Estructura Global.pdf" frameborder="0"></iframe>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfgH055gyU3izLSivL15oVzrw2uk-YXnQH2CfIJpQ0kQilnEg/viewform?embedded=true" width="640" height="2197" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
                 </article>
 
             </article>
