--- a/fase4/paginas/aprendizaje/2-Estructura Del Cuerpo.html
+++ b/fase4/paginas/aprendizaje/2-Estructura Del Cuerpo.html
@@ -64,7 +64,7 @@
 
         <!--SECTION-->
         <section>
-            <h1>1. Estructura Global.</h1><br>
+            <h1>2. Estructura Del Cuerpo.</h1><br>
 
             <!--ARTICLE-->
             <article>
