--- a/fase4/paginas/recursos/3-Dentro Del Cuerpo.html
+++ b/fase4/paginas/recursos/3-Dentro Del Cuerpo.html
@@ -45,8 +45,8 @@
             </li>
             <li><a href="#">Aprendizaje</a>
                 <ul class="dropdown-1">
-                    <li> <a href="#">Aprendizaje 1</a> </li>
-                    <li><a href="#">Aprendizaje 2</a></li>
+                    <li> <a href="../aprendizaje/1-Estructura Global.html">1-Estructura Global.</a> </li>
+                    <li><a href="../aprendizaje/2-Estructura Del Cuerpo.html">2-Estructura Del Cuerpo.</a></li>
                 </ul>
             </li>
             <li><a href="../autor.html">Autor</a></li>
