--- a/fase4/paginas/aprendizaje/2-Estructura Del Cuerpo.html
+++ b/fase4/paginas/aprendizaje/2-Estructura Del Cuerpo.html
@@ -43,13 +43,13 @@
                     <li><a href="../recursos/5-Referencia Rápida.html">5. Referencia Rápida.</a></li>
                 </ul>
             </li>
-            <<li><a href="#">Aprendizaje</a>
+            <li><a href="#">Aprendizaje</a>
                 <ul class="dropdown-1">
                     <li> <a href="../aprendizaje/1-Estructura Global.html">1-Estructura Global.</a> </li>
                     <li><a href="../aprendizaje/2-Estructura Del Cuerpo.html">2-Estructura Del Cuerpo.</a></li>
                 </ul>
-                </li>
-                <li><a href="../autor.html">Autor</a></li>
+            </li>
+            <li><a href="../autor.html">Autor</a></li>
         </ul>
     </nav>
 
