--- a/fase4/index.html
+++ b/fase4/index.html
@@ -18,7 +18,8 @@
     <!-- Encabezado -->
     <header>
         <img height="200px" width="200px" src="../fase4/img/Logo.png" alt="Logo">
-        <h1>Sitio web como herramienta de aprendizaje del tema: <br> Etiquetas Básicas de HTML, atributos y valores</h1>
+        <h1>Sitio web como herramienta de aprendizaje del tema: <br> Etiquetas Básicas de HTML, atributos y valores</h1><br>
+
     </header>
 
     <!-- MENU -->
